--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                 Dolore nulla et, dicta qui repudiandae quos sit 
+                laudantium quae excepturi, vitae doloribus magnam 
+                veniam porro eligendi quaerat vel quidem amet illum?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Earum ut, ullam ducimus aut debitis cumque pariatur 
+                 ratione nihil! Itaque ab eligendi cumque. Non expedita
+                  ratione quae dicta explicabo suscipit obcaecati.</p>
         </article>
     </main>
 </body>
