--- a/index.html
+++ b/index.html
@@ -11,20 +11,25 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                  Dolore nulla et, dicta qui repudiandae quos sit 
                 laudantium quae excepturi, vitae doloribus magnam 
                 veniam porro eligendi quaerat vel quidem amet illum?</p>
+                <p><a href="https://www.youtube.com/watch?v=Ejkb_YpuHWs&list=PLHz_AreHm4dkZ9-atkcmcBaMZdmLHft8n">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                  Earum ut, ullam ducimus aut debitis cumque pariatur 
                  ratione nihil! Itaque ab eligendi cumque. Non expedita
                   ratione quae dicta explicabo suscipit obcaecati.</p>
+                  <p><a href="https://www.youtube.com/watch?v=BXqUH86F-kA&list=PLntvgXM11X6pi7mW0O4ZmfUI1xDSIbmTm">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
